更新，增加移动版

--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>平米科技</title><link href=/static/css/app.a50447228b3c7d19c46e90a237474434.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.92a434c973eefec2db1a.js></script><script type=text/javascript src=/static/js/app.1477951e418919a14e78.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>平米科技</title><script>if (/(iPhone|iPad|iPod|iOS|Android)/i.test(navigator.userAgent)) { 
+            //移动端加载flexible.js
+            (function(designWidth, maxWidth) {
+                var doc = document,
+                win = window,
+                docEl = doc.documentElement,
+                remStyle = document.createElement("style"),
+                tid;
+
+                function refreshRem() {
+                    var width = docEl.getBoundingClientRect().width;
+                    maxWidth = maxWidth || 540;
+                    width>maxWidth && (width=maxWidth);
+                    var rem = width * 10 / designWidth;
+                    remStyle.innerHTML = 'html{font-size:' + rem + 'px;}';
+                }
+
+                if (docEl.firstElementChild) {
+                    docEl.firstElementChild.appendChild(remStyle);
+                } else {
+                    var wrap = doc.createElement("div");
+                    wrap.appendChild(remStyle);
+                    doc.write(wrap.innerHTML);
+                    wrap = null;
+                }
+                //要等 wiewport 设置好后才能执行 refreshRem，不然 refreshRem 会执行2次；
+                refreshRem();
+
+                win.addEventListener("resize", function() {
+                    clearTimeout(tid); //防止执行两次
+                    tid = setTimeout(refreshRem, 300);
+                }, false);
+
+                win.addEventListener("pageshow", function(e) {
+                    if (e.persisted) { // 浏览器后退的时候重新计算
+                        clearTimeout(tid);
+                        tid = setTimeout(refreshRem, 300);
+                    }
+                }, false);
+
+                if (doc.readyState === "complete") {
+                    doc.body.style.fontSize = "16px";
+                } else {
+                    doc.addEventListener("DOMContentLoaded", function(e) {
+                        doc.body.style.fontSize = "16px";
+                    }, false);
+                }
+            })(750, 750);
+        }</script><link href=./static/css/app.dc7611f11f451df2cb5eca51f73c1376.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.da0aea4d3aa1a18636d3.js></script><script type=text/javascript src=./static/js/app.e8d01b0cb54469fba657.js></script></body></html>
